<resources>
    <string name="app_name">CretixSync</string>
    <string name="title_sync">Синхронизация</string>
    <string name="title_link">Соединение</string>
    <string name="title_settings">Настройки</string>
    <string name="sync_status_text">Статус сервера: </string>
    <string name="btn_start_sync">Синхронизировать</string>
    <string name="device_not_connected">Устройство не соединено</string>
    <string name="status_offline">оффлайн</string>
    <string name="status_online">онлайн</string>
    <string name="selected_albums">Выберите альбомы:</string>
    <string name="cancel">Отмена</string>
    <string name="hintPassword">Пароль</string>
    <string name="hintLogin">Логин</string>
    <string name="hintIp">Адрес сервера</string>
    <string name="hintLogIn">Войти</string>
    <string name="logout">Выйти</string>
    <string name="hingReg">Регистрация</string>

</resources>
