<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sync">

    <fragment
        android:id="@+id/navigation_sync"
        android:name="com.cretix.cretixsync.ui.sync.SyncFragment"
        android:label="@string/title_sync"
        tools:layout="@layout/fragment_sync" />

    <fragment
        android:id="@+id/navigation_link"
        android:name="com.cretix.cretixsync.ui.link.LinkFragment"
        android:label="@string/title_link"
        tools:layout="@layout/fragment_link" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.cretix.cretixsync.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
